--- a/Train_TFLite2_Object_Detction_Model.ipynb
+++ b/Train_TFLite2_Object_Detction_Model.ipynb
@@ -96,11 +96,11 @@
         "!python --version"
       ],
       "metadata": {
-        "id": "F3oMVCexCFE_",
-        "outputId": "5083c899-d349-4379-8af1-5684ab2f1a0f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "F3oMVCexCFE_",
+        "outputId": "5083c899-d349-4379-8af1-5684ab2f1a0f"
       },
       "execution_count": 1,
       "outputs": [
@@ -131,11 +131,11 @@
         "!apt-get install -y python3.10 python3.10-dev python3.10-distutils\n"
       ],
       "metadata": {
-        "id": "7-gJxUL-CIbw",
-        "outputId": "bfc8eb4a-32b0-4419-c5e9-a09cf2c79825",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "7-gJxUL-CIbw",
+        "outputId": "bfc8eb4a-32b0-4419-c5e9-a09cf2c79825"
       },
       "execution_count": 3,
       "outputs": [
@@ -164,11 +164,11 @@
         "!update-alternatives --config python3  # Choose Python 3.8 when prompted\n"
       ],
       "metadata": {
-        "id": "sQAjnR--CPbA",
-        "outputId": "e01f7abd-8d08-47d0-ef72-054187020a78",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "sQAjnR--CPbA",
+        "outputId": "e01f7abd-8d08-47d0-ef72-054187020a78"
       },
       "execution_count": 4,
       "outputs": [
@@ -196,11 +196,11 @@
         "!python --version"
       ],
       "metadata": {
-        "id": "EQWmyjo6CYCa",
-        "outputId": "be299311-62da-47df-dc48-f064ee79853c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "EQWmyjo6CYCa",
+        "outputId": "be299311-62da-47df-dc48-f064ee79853c"
       },
       "execution_count": 5,
       "outputs": [
@@ -219,11 +219,11 @@
         "!pip --version\n"
       ],
       "metadata": {
-        "id": "AD303tefCaWJ",
-        "outputId": "28430335-baa1-4915-c2d1-9723c2bd274b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "AD303tefCaWJ",
+        "outputId": "28430335-baa1-4915-c2d1-9723c2bd274b"
       },
       "execution_count": 6,
       "outputs": [
@@ -246,11 +246,11 @@
         "!pip install --upgrade pip\n"
       ],
       "metadata": {
-        "id": "bf67OrI-Cc5w",
-        "outputId": "2d6375ae-8b9e-4a49-d520-f91e27a1312e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "bf67OrI-Cc5w",
+        "outputId": "2d6375ae-8b9e-4a49-d520-f91e27a1312e"
       },
       "execution_count": 7,
       "outputs": [
@@ -310,11 +310,11 @@
         "!pip --version\n"
       ],
       "metadata": {
-        "id": "Vx_BO98eChg4",
-        "outputId": "5204c092-ed97-48ea-ddd2-2a9833a83aaa",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Vx_BO98eChg4",
+        "outputId": "5204c092-ed97-48ea-ddd2-2a9833a83aaa"
       },
       "execution_count": 8,
       "outputs": [
@@ -332,10 +332,10 @@
       "execution_count": 9,
       "metadata": {
         "id": "ypWGYdPlLRUN",
-        "outputId": "2c20832f-450e-41e3-d6f7-118d8e68389a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "2c20832f-450e-41e3-d6f7-118d8e68389a"
       },
       "outputs": [
         {
@@ -399,11 +399,11 @@
       "execution_count": 12,
       "metadata": {
         "id": "OLDnCkLLwLr6",
-        "outputId": "924a09ca-87dc-418e-cb0e-2b7f50f6880e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        }
+        },
+        "outputId": "924a09ca-87dc-418e-cb0e-2b7f50f6880e"
       },
       "outputs": [
         {
@@ -1650,10 +1650,10 @@
       "execution_count": 14,
       "metadata": {
         "id": "wh_HPMOqWH9z",
-        "outputId": "703efc52-62d0-4267-8efe-2b84f742827e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "703efc52-62d0-4267-8efe-2b84f742827e"
       },
       "outputs": [
         {
@@ -1962,6 +1962,18 @@
         "  ...\n",
         "```"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')"
+      ],
+      "metadata": {
+        "id": "lFAJ9PY4GZGZ"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
